[package]
name = "quake3-log-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.9"
clap = { version = "4.5.1", features = ["derive"] }
error-stack = "0.4.1"
memmap2 = "0.9.3"
mimalloc = "0.1.39"
once_cell = "1.19.0"
rayon = "1.8.1"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
strum = { version = "0.26.1", features = ["derive", "strum_macros"] }

[profile.release]
opt-level = 3
debug = false
panic = "abort"
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
